# lammps-mpi4py

./: README.md  pyproject.toml
examples/: custom.py  simple.py
src/lammps_mpi4py/: __init__.py
