[project]
name = "lammps-mpi4py"
version = "0.1.0"
description = "Helps to run lammps module with mpi4py"
readme = "README.md"
authors = [
    { name = "Denis Strizhkin", email = "strdenis02@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = ["mpi4py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.11.2",
]
